# FussyBin-o1Bridge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
esp32/: boot.py  main.py
esp32/servo_smoke_test/: platformio.ini
esp32/servo_smoke_test/.pio/libdeps/esp32-wrover/FTServo/: .piopm
esp32/servo_smoke_test/src/: servo_smoke_test.ino
scripts/: classify_live.py  classify_with_esp32.py  classify_with_filepath.py  classify_with_webcam.py  eval_classifier.py  preview_esp32.py
src/: display.py  rubbish_item_classifier.py
tests/: test_classifier.py
