[project]
name = "fussybin"
version = "0.1.0"
description = "Smart bin rubbish classifier using CLIP and an ESP32 camera"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12.0",
    "open_clip_torch>=3.3.0",
    "opencv-python>=4.13.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pyserial>=3.5",
    "mpremote>=1.28.0",
    "esptool>=5.2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"
